# meiga

./: AUTHORS  COPYING  ChangeLog  INSTALL  MAINTAINERS  Makefile.am  MyServer.vala  NEWS  README  Rss.vala  autogen.sh  build-package.sh  client-test.sh  compile.sh  configure.ac  dbus-service.sh  myserver.vala  org.gnome.FromGnomeToTheWorld.service
debian/: changelog  control  copyright  dirs  docs  files  rules
doc/: meiga-pbuilder.txt
fedora/: meiga.spec
gui/: Gui.vala  compile.sh
gui/glade/: gui.glade
po/: LINGUAS  POTFILES.in  POTFILES.skip  es.po  fr.po  gl_ES.po  zh_TW.po
scripts/: Makefile.am  meiga-kde3.desktop  meiga-kde4.desktop  share-on-meiga
scripts/nautilus-scripts/: Share on Meiga...
server/: FromGnomeToTheWorld.vala  client-test.sh
src/: Makefile.am  config.vapi  mainwindow.vala
src/gui/: Gui.vala  Makefile.am  compile.sh  config.vapi  meiga.desktop.in
src/gui/glade/: gui.glade
src/gui/ui/: gui.glade  gui.ui
src/net/: Makefile.am  Test.vala  compile-upnp.sh  fwfon  fwlocaliface  fwlocalip  fwssh  fwssh-task  fwupnp.c  getinternalip.sh  make-meiga-ssl-cert  meiga-askpass  upnp.c  upnp.h  upnp.vapi
src/server/: FromGnomeToTheWorld.vala  Log.vala  Makefile.am  Meiga.vala  MeigaServer.vala  MyServer.vala  Net.vala  Rss.vala  ServerContext.vala  Test.vala  client-test.sh  com.igalia.Meiga.service.in  compile-test.sh  compile-upnp.sh  compile.sh  libsoup-2.4.vapi  upnp.c  upnp.h  upnp.vapi
