NULL = 

#Build in these directories:

SUBDIRS = \
	src/server \
	src/gui \
	src/net \
	scripts \
	po \
	$(NULL)

EXTRA_DIST = \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in\
	$(NULL)

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update
	po/.intltool-merge-cache \
	$(NULL)

