AC_INIT([fgtw], [0.1.0], [info@igalia.com], [fgtw])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=fgtw
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GTHREAD_REQUIRED=2.16.6
GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.10.0
SOUP22_REQUIRED=2.2.0
SOUP24_REQUIRED=2.4.0
DBUSGLIB_REQUIRED=0.74
GLADE_REQUIRED=0.22
GMODULE_REQUIRED=0.22
GUPNP_REQUIRED=0.6

PKG_CHECK_MODULES(gthread, gthread-2.0 >= $GTHREAD_REQUIRED)
PKG_CHECK_MODULES(glib, glib-2.0 >= $GLIB_REQUIRED)
PKG_CHECK_MODULES(gobject, gobject-2.0 >= $GLIB_REQUIRED)
PKG_CHECK_MODULES(gtk, gtk+-2.0 >= $GTK_REQUIRED)
PKG_CHECK_MODULES(libsoup22, libsoup-2.2 >= $SOUP22_REQUIRED)
PKG_CHECK_MODULES(libsoup24, libsoup-2.4 >= $SOUP24_REQUIRED)
PKG_CHECK_MODULES(dbusglib, dbus-glib-1 >= $DBUSGLIB_REQUIRED)
PKG_CHECK_MODULES(libglade, libglade-2.0 >= $GLADE_REQUIRED)
PKG_CHECK_MODULES(gmodule, gmodule-2.0 >= $GMODULE_REQUIRED)
PKG_CHECK_MODULES(gupnp, gupnp-1.0 >= $GUPNP_REQUIRED)

AC_SUBST(gthread_CFLAGS)
AC_SUBST(gthread_LIBS)
AC_SUBST(glib_CFLAGS)
AC_SUBST(glib_LIBS)
AC_SUBST(gobject_CFLAGS)
AC_SUBST(gobject_LIBS)
AC_SUBST(gtk_CFLAGS)
AC_SUBST(gtk_LIBS)
AC_SUBST(libsoup22_CFLAGS)
AC_SUBST(libsoup22_LIBS)
AC_SUBST(libsoup24_CFLAGS)
AC_SUBST(libsoup24_LIBS)
AC_SUBST(dbusglib_CFLAGS)
AC_SUBST(dbusglib_LIBS)
AC_SUBST(libglade_CFLAGS)
AC_SUBST(libglade_LIBS)
AC_SUBST(gmodule_CFLAGS)
AC_SUBST(gmodule_LIBS)
AC_SUBST(gupnp_CFLAGS)
AC_SUBST(gupnp_LIBS)

AC_CONFIG_FILES([Makefile
	src/server/Makefile
	src/gui/Makefile
	src/net/Makefile
	po/Makefile.in])

AC_OUTPUT
