NULL = 

nautilusdir = ${datadir}/nautilus-scripts
nautilus_SCRIPTS = \
        share-on-meiga \
        $(NULL)

konquerordir = ${datadir}/apps/konqueror/servicemenus
konqueror_DATA = \
        meiga.desktop \
        $(NULL)

EXTRA_DIST = \
	$(nautilus_SCRIPTS) \
	$(konqueror_DATA) \
	$(NULL)

DISTCLEANFILES = \
	$(NULL)
