NULL = 

nautilusdir = ${datadir}/nautilus-scripts
nautilus_SCRIPTS = \
        share-on-meiga \
        $(NULL)

konqueror3dir = ${datadir}/apps/konqueror/servicemenus
konqueror3_DATA = \
        meiga-kde3.desktop \
        $(NULL)

konqueror4dir = ${datadir}/kde4/services/ServiceMenus
konqueror4_DATA = \
        meiga-kde4.desktop \
        $(NULL)

EXTRA_DIST = \
	$(nautilus_SCRIPTS) \
	$(konqueror3_DATA) \
	$(konqueror4_DATA) \
	$(NULL)

DISTCLEANFILES = \
	$(NULL)
